(Bug Fix) Bug: Method org.gwt.mosaic.ui.client.table.SelectionGrid.selectRow(int, Element, boolean, boolean) invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead